[gd_scene load_steps=41 format=3 uid="uid://bapvy71043313"]

[ext_resource type="Script" path="res://Player/player.gd" id="1_1akqa"]
[ext_resource type="AudioStream" uid="uid://cxod1j5xq50sq" path="res://levels/Step_03.wav" id="2_01uoc"]
[ext_resource type="Texture2D" uid="uid://bt8gb54hjkhl1" path="res://Player/player.png" id="2_vtor2"]
[ext_resource type="Texture2D" uid="uid://dvhb0we5l4wu5" path="res://Player/timby_sheet.png" id="3_3npf3"]
[ext_resource type="AudioStream" uid="uid://cohomxrh847yi" path="res://levels/Step_01.wav" id="3_mqhok"]
[ext_resource type="AudioStream" uid="uid://c4xr2sis82hqc" path="res://levels/Step_02.wav" id="4_q78kk"]
[ext_resource type="Texture2D" uid="uid://c0kk15rkf3qlq" path="res://Player/timby_sheet-800pct.png" id="6_aoasm"]
[ext_resource type="Shader" path="res://shaders/vignette.gdshader" id="8_0r5ne"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ok28f"]
size = Vector2(13, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_0j1vc"]
atlas = ExtResource("2_vtor2")
region = Rect2(0, 96, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y3tj3"]
atlas = ExtResource("2_vtor2")
region = Rect2(33, 96, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_upd7w"]
atlas = ExtResource("2_vtor2")
region = Rect2(66, 96, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pstnt"]
atlas = ExtResource("6_aoasm")
region = Rect2(5544, 0, 264, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_4sr2n"]
atlas = ExtResource("6_aoasm")
region = Rect2(5808, 0, 264, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_iml2i"]
atlas = ExtResource("6_aoasm")
region = Rect2(6072, 0, 264, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_pvksj"]
atlas = ExtResource("6_aoasm")
region = Rect2(6336, 0, 264, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_36qrj"]
atlas = ExtResource("6_aoasm")
region = Rect2(6600, 0, 264, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_rn2q4"]
atlas = ExtResource("6_aoasm")
region = Rect2(6864, 0, 264, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_jy8cs"]
atlas = ExtResource("3_3npf3")
region = Rect2(495, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wof4r"]
atlas = ExtResource("3_3npf3")
region = Rect2(0, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vltq1"]
atlas = ExtResource("3_3npf3")
region = Rect2(33, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rsoew"]
atlas = ExtResource("3_3npf3")
region = Rect2(66, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h3h6k"]
atlas = ExtResource("3_3npf3")
region = Rect2(99, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p0384"]
atlas = ExtResource("3_3npf3")
region = Rect2(462, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_551d5"]
atlas = ExtResource("6_aoasm")
region = Rect2(7128, 0, 264, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_rroq2"]
atlas = ExtResource("6_aoasm")
region = Rect2(7392, 0, 264, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_yn563"]
atlas = ExtResource("6_aoasm")
region = Rect2(7656, 0, 264, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_8o8rr"]
atlas = ExtResource("6_aoasm")
region = Rect2(7920, 0, 264, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_noj7n"]
atlas = ExtResource("3_3npf3")
region = Rect2(132, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ejfq5"]
atlas = ExtResource("3_3npf3")
region = Rect2(165, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_42n73"]
atlas = ExtResource("3_3npf3")
region = Rect2(198, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_orb8a"]
atlas = ExtResource("3_3npf3")
region = Rect2(231, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ty3c"]
atlas = ExtResource("3_3npf3")
region = Rect2(264, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a5duh"]
atlas = ExtResource("3_3npf3")
region = Rect2(297, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_saag6"]
atlas = ExtResource("3_3npf3")
region = Rect2(528, 0, 33, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_f4wda"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0j1vc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y3tj3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_upd7w")
}],
"loop": true,
"name": &"crouch",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pstnt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4sr2n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iml2i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pvksj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_36qrj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rn2q4")
}],
"loop": true,
"name": &"dizzy",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jy8cs")
}],
"loop": true,
"name": &"fall",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wof4r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vltq1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rsoew")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h3h6k")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p0384")
}],
"loop": true,
"name": &"jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_551d5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rroq2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yn563")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8o8rr")
}],
"loop": true,
"name": &"roll_fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_noj7n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ejfq5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_42n73")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_orb8a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ty3c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a5duh")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_saag6")
}],
"loop": false,
"name": &"wall_slide",
"speed": 10.0
}]

[sub_resource type="Animation" id="Animation_xrwyl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.5, 0.5)]
}

[sub_resource type="Animation" id="Animation_0jq76"]
resource_name = "camera"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_prjx3"]
_data = {
"RESET": SubResource("Animation_xrwyl"),
"camera": SubResource("Animation_0jq76")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xw1k5"]
shader = ExtResource("8_0r5ne")
shader_parameter/outerRadius = 1.0
shader_parameter/MainAlpha = 1.0

[node name="Player" type="CharacterBody2D" groups=["player"]]
texture_filter = 1
collision_layer = 2
script = ExtResource("1_1akqa")
sfx_jump = ExtResource("2_01uoc")
sfx_footstep = ExtResource("3_mqhok")
sfx_fall = ExtResource("4_q78kk")

[node name="raycast_wall_left" type="RayCast2D" parent="."]
target_position = Vector2(-20, 0)

[node name="raycast_wall_right" type="RayCast2D" parent="."]
target_position = Vector2(20, 0)

[node name="ColorRect2" type="ColorRect" parent="."]
visible = false
offset_left = -28.0
offset_top = -45.0
offset_right = 25.0
offset_bottom = -31.0
color = Color(0, 0, 0.627451, 1)

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
offset_left = -27.0
offset_top = -29.0
offset_right = 26.0
offset_bottom = -15.0
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -12.0
offset_top = -30.5
offset_right = 11.0
offset_bottom = -13.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 12
text = "Oiiii"

[node name="Label2" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -12.0
offset_top = -46.0
offset_right = 11.0
offset_bottom = -29.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 12
text = "Oiiii"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_ok28f")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(-1, -6)
sprite_frames = SubResource("SpriteFrames_f4wda")
animation = &"fall"
autoplay = "idle"

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.5, 0.5)
position_smoothing_enabled = true
rotation_smoothing_enabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Camera2D"]
libraries = {
"": SubResource("AnimationLibrary_prjx3")
}
autoplay = "camera"

[node name="sfx_player" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
volume_db = -4.457
bus = &"SFX"

[node name="key_holder" type="Marker2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Vignette" type="ColorRect" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_xw1k5")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -7.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="frame_changed" from="Sprite" to="." method="_on_sprite_frame_changed"]
